recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:11: error: value ^ is not a member of Double
	polygonFractal(levels-2, sides, length/(shrink^2), shrink)
                                                      ^